# tech42-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
infra/: agentcore.tf  cognito.tf  ecr.tf  iam.tf  main.tf  output.tf  secrets.tf  terraform.tfvar.example  variables.tf
notebooks/: demo.ipynb  demo_invocation.ipynb  demo_invocation_aws.ipynb  demo_invocation_local.ipynb
src/: config.py  ingest_docs.py  llm.py  main.py  test_rag.py
src/agent/: finance_tools.py  prompts.py  rag_tool.py  test_agent.py  tools.py  workflow.py
src/api/: app.py  schemas.py
src/api/middleware/: auth.py
src/api/routes/: agent.py
src/core/: config.py  llm.py
src/observability/: langfuse_handler.py
src/rag/: embeddings.py  ingest.py  loader.py  pipeline.py  retriever.py  splitter.py  vectorstore.py
src/tests/: test_agent.py  test_finance.py  test_rag.py
