[project]
name = "tech42-agent"
version = "1.00"
description = "smart fintech agent"
authors = [
    {name = "wild10"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "openai (>=2.24.0,<3.0.0)",
    "pypdf (>=6.7.4,<7.0.0)", 
    "langchain (>=1.2.10,<2.0.0)", 
    "langchain-text-splitters (>=1.1.1,<2.0.0)", 
    "langchain-openai (>=1.1.10,<2.0.0)", 
    "pinecone (>=7.3.0,<8.0.0)", 
    "langchain-pinecone (>=0.2.13,<0.3.0)", 
    "langchain-core (>=1.2.18,<2.0.0)", 
    "langgraph (>=1.0.10,<2.0.0)", 
    "langfuse (>=4.0.1,<5.0.0)", 
    "yfinance (>=1.2.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"