[project]
name = "tech42-agent"
version = "1.0.0"
description = "smart fintech agent"
authors = [
    {name = "wild10"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-dotenv>=1.2.1,<2.0.0",
    "openai>=2.24.0,<3.0.0",
    "pypdf>=6.7.4,<7.0.0",
    "langchain>=1.2.10,<2.0.0",
    "langchain-text-splitters>=1.1.1,<2.0.0",
    "langchain-openai>=1.1.10,<2.0.0",
    "pinecone>=7.3.0,<8.0.0",
    "langchain-pinecone>=0.2.13,<0.3.0",
    "langchain-core>=1.2.18,<2.0.0",
    "langgraph>=1.0.10,<2.0.0",
    "langfuse>=4.0.1,<5.0.0",
    "yfinance>=1.2.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.42.0,<0.43.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "httpx>=0.28.1,<0.29.0",
    "requests>=2.32.5,<3.0.0",
    "boto3>=1.35.0",
    "aws-opentelemetry-distro>=0.10.1",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "botocore>=1.35.0",
    "notebook>=7.5.5",
    "ipywidgets>=8.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
